style.css
html {
  height: 100%;
  width: 100%;
}

.art {
  background-image: url("images/BlurredTypewriter.jpg");
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
}

.popup{
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 20px;
  text-align: center;
  background-color: #e3cdb6;
  border: 2px solid #a24d11;
  width: 25vw;
  height: 100vh;
  right: 0px;

}

h1{
  font-size: 45px;
  background-color: #d4651dff;
  border: 3px solid #a24d11;
  border-radius: 5px;
}

p{
  background-color: #d4651dff;
  border: 3px solid #a24d11;
  border-radius: 5px;
  font-size: 35px;
}

.exitbutton{
  border: 2px solid #a24d11; 
}

.mainbuttons{
  background-color: #d4651dff;
  border: 5px solid #a24d11;
  border-radius: 5px;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 40px;
  text-align: center;
  width: 35%;
  margin-left: 32%;
 
}

header{
 margin-left: 25%;

}

.moveDown{
  margin-top: 8vh;
}

